# sainfoin_seed_effdet

./: .gitignore  EfficientDet Pytorch-lightning with EfficientNet v2 backbone Blog Post.ipynb  LICENSE  README.md  cycle_3_inference.py  data_agg.csv  load_state_dict.py  prelabel_images.py  pyproject.toml  requirements.txt  train.py  train_effdet.py  train_lightning.py  visualize_bboxes.py
config/: model_config.yaml
configs/: effdet_d0.yaml  effdet_d1.yaml  effdet_d2.yaml  effdet_d3.yaml  effdet_d4.yaml  effdet_d5.yaml  fasterrcnn_resnet50.yaml  retinanet_swin_t.yaml
data/: train_labels.json  val_labels.json
data/sainfoin_cycle_3/: C3 Legume fruit yield.xlsx
metadata/: class_mapping.json  inference_confg.yaml  model_config.json
model_checkpoints/effdet_d0_wd0.005_2026-02-16_15.51.05/: effdet_d0_wd0.005_2026-02-16_15.51.05_config.yaml
model_checkpoints/effdet_d1_wd0.005_2026-02-16_16.05.25/: effdet_d1_wd0.005_2026-02-16_16.05.25_config.yaml
model_checkpoints/effdet_d2_wd0.005_2026-02-16_16.21.05/: effdet_d2_wd0.005_2026-02-16_16.21.05_config.yaml
model_checkpoints/effdet_d4_wd0.005_2026-02-16_16.37.20/: effdet_d4_wd0.005_2026-02-16_16.37.20_config.yaml
scripts/: format_bboxes.py  run_backbone_experiment.sh
src/: calculate_dataset_means.py  callbacks.py  create_model.py  data_preparation.py  datasets.py  effdet_datamodule.py  effdet_module.py  eval.py  metrics.py  models.py  optim.py  parameters.py  trainer.py  transforms.py
src_new/: datasets.py  models.py  transforms.py  utils.py
test/: test_datasets.py  test_post_processing.py
(+9 files in other folders)
