[project]
name = "sainfoin-seed-effdet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "effdet>=0.4.1",
    "ensemble-boxes>=1.0.9",
    "fasttransform>=0.0.2",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
